# arm_ws

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  PORTING_NOTES.md  README.md  SCRIPT_USAGE.md  init_and_push_to_github.sh  plan.md
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile.dev  README.md  docker-compose.yml
docs/: installation.md  quickstart.md  testing.md  testing_phase3.md  testing_phase4.md  troubleshooting.md
docs/integration/: ft_sensor.md
scripts/: install_deps.sh
src/: convert_urdf_ros1_to_ros2.py  reset_ethercat_op.py  wait_for_ethercat_op.py
src/armv7/: CMakeLists.txt  package.xml
src/armv7/launch/: gazebo.launch.py
src/armv7/meshes/: base_link.STL  link1.STL  link4.STL  link5.STL
src/armv7/urdf/: armv7.urdf
src/armv7_bringup/: CMakeLists.txt  README.md  package.xml
src/armv7_bringup/config/: EUPH11_config.yaml  EUPH11_cst_config.yaml  EUPH14_config.yaml  EUPH14_cst_config.yaml  EUPH17_config.yaml  EUPH17_cst_config.yaml  ros2_controllers.yaml
src/armv7_bringup/launch/: arm.launch.py
src/armv7_bringup/urdf/: armv7_cst.ros2_control.xacro  armv7_ethercat.ros2_control.xacro  armv7_fake.ros2_control.xacro
src/armv7_cpp_api/: CMakeLists.txt  README.md  package.xml
src/armv7_cpp_api/example/: hello_world.cpp
src/armv7_cpp_api/include/armv7_cpp_api/: client.hpp
src/armv7_cpp_api/src/: client.cpp
src/armv7_description/: CMakeLists.txt  README.md  package.xml
src/armv7_description/config/: view.rviz
src/armv7_description/launch/: display.launch.py  gazebo.launch.py
src/armv7_description/meshes/: link3.STL  link6.STL  link7.STL
src/armv7_description/test/: test_urdf.py
src/armv7_description/urdf/: armv7.csv  armv7.urdf  armv7.urdf.xacro
src/armv7_diagnostics/: README.md  package.xml  setup.cfg  setup.py
src/armv7_diagnostics/armv7_diagnostics/: joint_diagnostics_node.py
src/armv7_diagnostics/config/: joint_diagnostics.yaml
src/armv7_diagnostics/launch/: diagnostics.launch.py
src/armv7_diagnostics/resource/: armv7_diagnostics
src/armv7_dyn_ident/: README.md  package.xml  setup.cfg  setup.py
src/armv7_dyn_ident/armv7_dyn_ident/: __init__.py  collect_node.py  excitation.py  gravity_model.py  identify.py  urdf_model.py
src/armv7_dyn_ident/config/: excitation.yaml  identified_params.yaml
src/armv7_dyn_ident/launch/: collect.launch.py
src/armv7_dyn_ident/test/: conftest.py  test_excitation.py  test_gravity_model.py  test_identify.py
src/armv7_ee_dummy_gripper/: CMakeLists.txt  README.md  package.xml
src/armv7_ee_dummy_gripper/config/: gripper_controller.yaml
src/armv7_ee_dummy_gripper/urdf/: dummy_gripper.ros2_control.xacro  dummy_gripper.urdf.xacro
src/armv7_examples/: README.md  package.xml  setup.cfg  setup.py
src/armv7_examples/armv7_examples/: hello_world.py  pick_and_place.py  pose_grid.py  teach_playback.py
src/armv7_examples/resource/: armv7_examples
src/armv7_eyehand/: CMakeLists.txt  README.md  package.xml
src/armv7_eyehand/config/: handeye_calibration.yaml
src/armv7_eyehand/launch/: handeye_publisher.launch.py
src/armv7_eyehand/urdf/: realsense_d435.urdf.xacro
src/armv7_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/armv7_moveit/config/: EUPH11_config.yaml  EUPH14_config.yaml  armv7.srdf  armv7.urdf.xacro  armv7ec.urdf.xacro  joint_limits.yaml  ros2_controllers.yaml
src/armv7_moveit/launch/: demo.launch.py  ecdemo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
src/armv7_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/armv7_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
src/armv7_moveit_config/launch/: _moveit_config_loader.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/armv7_py/: README.md  package.xml  setup.cfg  setup.py
src/armv7_py/armv7_py/: __init__.py  client.py
src/armv7_py/resource/: armv7_py
src/armv7_py/test/: test_client_import.py
src/armv7_safety/: README.md  package.xml  setup.cfg  setup.py
src/armv7_safety/armv7_safety/: estop_node.py  workspace_bbox_node.py
src/armv7_safety/config/: workspace_bbox.yaml
src/armv7_safety/launch/: safety.launch.py
src/armv7_safety/resource/: armv7_safety
src/armv7_safety/test/: test_workspace_bbox.py
src/armv7_tcp/: README.md  package.xml  setup.cfg  setup.py
src/armv7_tcp/armv7_tcp/: tcp_publisher_node.py
src/armv7_tcp/config/: tcp.yaml
src/armv7_tcp/launch/: tcp.launch.py
src/armv7_tcp/resource/: armv7_tcp
src/armv7_zero_force_controller/: CMakeLists.txt  README.md  armv7_zero_force_controller.xml  package.xml
src/armv7_zero_force_controller/config/: gravity_compensation.yaml
src/armv7_zero_force_controller/include/armv7_zero_force_controller/: gravity_compensation_controller.hpp
src/armv7_zero_force_controller/launch/: free_drive.launch.py
src/armv7_zero_force_controller/src/: gravity_compensation_controller.cpp
