<?xml version="1.0"?>
<package format="3">
  <name>armv7_diagnostics</name>
  <version>0.1.0</version>
  <description>Aggregates joint-state information into diagnostic_msgs/DiagnosticArray on /diagnostics so rqt_runtime_monitor can show per-joint health.</description>
  <author>TianFeiF</author>
  <maintainer email="chunyvtian@gmail.com">TianFeiF</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
