<?xml version="1.0"?>
<package format="3">
  <name>armv7_dyn_ident</name>
  <version>0.1.0</version>
  <description>Dynamics parameter identification for the armv7 arm. Provides a static-pose data
  collector (drives the arm in the existing position mode and records joint angle + measured
  torque), a symbolic gravity regressor built from the URDF, and an offline least-squares
  identification script that fits per-link mass + centre-of-mass. The result feeds
  armv7_zero_force_controller for gravity compensation / free-drive. A Fourier excitation
  trajectory generator is included for future full-dynamics identification (v0.2).</description>
  <author>TianFeiF</author>
  <maintainer email="chunyvtian@gmail.com">TianFeiF</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sympy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
