<?xml version="1.0"?>
<package format="3">
  <name>armv7_examples</name>
  <version>0.1.0</version>
  <description>Runnable examples on top of armv7_py: hello_world, teach_playback, pose_grid.</description>
  <author>TianFeiF</author>
  <maintainer email="chunyvtian@gmail.com">TianFeiF</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>armv7_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
