<?xml version="1.0"?>
<package format="3">
  <name>armv7_tcp</name>
  <version>0.1.0</version>
  <description>Hot-reloadable TCP offset + payload state for armv7. Publishes a tf from link7 (or the EE base) to a configurable `tcp` frame, plus a /armv7/payload topic carrying the current payload mass + inertia. Both are settable via ros2 param at runtime, so swapping a gripper or grabbing a part does not require a relaunch.</description>
  <author>TianFeiF</author>
  <maintainer email="chunyvtian@gmail.com">TianFeiF</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
