<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armv7_zero_force_controller</name>
  <version>0.1.0</version>
  <description>Gravity-compensation (zero-force / free-drive) ros2_control controller for the
  armv7 arm. Computes the gravity torque G(q) from a KDL model of the robot_description
  (per-link mass + centre of mass optionally overridden by armv7_dyn_ident) and commands it
  on the effort interfaces, so the operator can move the arm by hand. Requires the drives in
  CiA-402 CST (torque) mode. Includes torque clamping, activation ramp-in, a velocity safety
  cutoff and an enable service.</description>
  <maintainer email="chunyvtian@gmail.com">TianFeiF</maintainer>
  <license>Apache-2.0</license>
  <author>TianFeiF</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
